add debug